# cryptodude

./: .env  .gitlab-ci.yml  README.md  html-db.html  pyproject.toml
app/: main.py
app/auth/: constants.py  endpoints.py  schemas.py  services.py
app/auth/db/: database.py  models.py  services.py
app/auth/templates/: get_token.html  index.html
